# jtm45

./: .gitignore  CMakeLists.txt  LICENSE  Profiling Record.txt  README.md  bld  inst  jtm45test.prof
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
JTM45/src/: CMakeLists.txt  JTM45.cpp  testInterpolationTables.cpp  testInvert.cpp  testMain.cpp  testMatrix.cpp  testMatrixMultiply.cpp  testNlModels.cpp  testPerformance.cpp  wdfJTM45Tree.hpp
JTM45/ttl/: JTM45.ttl  manifest.ttl
ToneStack/: Makefile
ToneStack/ttl/: ToneStack.ttl
rt-wdf/: CMakeLists.txt  Makefile  cmake_install.cmake  matrix.h  matrix_arm_neon.h  rt-wdf.cpp  rt-wdf.h  rt-wdf_arm_matrix.h  rt-wdf_arm_optimizations.h  rt-wdf_interpolatedTable.cpp  rt-wdf_interpolatedTable.h  rt-wdf_nlModels.cpp  rt-wdf_nlModels.h  rt-wdf_nlSolvers.cpp  rt-wdf_nlSolvers.h  rt-wdf_types.h
